# cppstart

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  rename.py
.github/workflows/: build.yml  initialize.yml  tests.yml
app/: CMakeLists.txt  main.cpp
cmake/: CompilerOptions.cmake  Coverage.cmake  Sanitizers.cmake  Tooling.cmake
docs/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/cppstart/: some.hpp
scripts/: rename.py
src/: CMakeLists.txt  some.cpp
test/: CMakeLists.txt  some_test.cpp
tests/: CMakeLists.txt
